fixed some overflowing input fields on smaller devices

--- a/client/src/Componenets/Main.css
+++ b/client/src/Componenets/Main.css
@@ -19,9 +19,9 @@
 }
 .heading{
 display: flex;
-justify-content:start;
+justify-content:flex-start;
 width: 100%;
-height: 50px;
+height: auto;
 }
 .heading>h1{
     width: 100%;
@@ -103,7 +103,7 @@ justify-content: center;
     width: 100%;
     margin-top: 10px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .existing{
     margin-right: 8%;
@@ -113,7 +113,7 @@ justify-content: center;
     width: 100%;
    justify-content: center;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .right_container{
     width: 65%;
@@ -129,7 +129,7 @@ justify-content: center;
     width: 100%;
     display:flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 }
 .text>h2{
     width: 80%;
@@ -174,5 +174,13 @@ justify-content: center;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+@media screen and (max-width:1100px) {
+    Input{
+        height: 30px !important;
+    }
+    .chakra-button{
+        height: 25px !important;
     }
 }
